@@ -46,6 +46,9 @@ struct _SPTextContext {
 	gint timeout;
 	guint show : 1;
 	guint phase : 1;
+
+	/* Preedit String */
+	gchar* preedit_string;
 };
 
 struct _SPTextContextClass {
